--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     border-style:groove;    
     }
 </style> 
-    <meta http-equiv="Content-Type" content="text/html; charset=SUTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script language="JavaScript">
         let push = 0;
         let like = 0;
