--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HEAD>
 <TITLE>UT Chat Board</TITLE>
 <style>
-    .board_box{
+    div#board_box{
     font-size:50;
     text-align:center; 
     height:800px;
@@ -13,7 +13,7 @@
     border-style:groove;    
     }
     
-    .minimum_unit_a{
+    div#minimum_unit_a{
     font-size:15;
     margin-left:30px;
     margin-right:30px;
@@ -52,7 +52,7 @@
 <CENTER>
 UT Chat Board へようこそ<BR>
 </CENTER>
-<div class = board_box>
+<div id = board_box>
 ここに掲示板が入る
     <form name="form1" action="javascropt:Like()">
         <input type="submit" value="いいね">
