--- a/投稿画面1月7日.html
+++ b/投稿画面1月7日.html
@@ -13,6 +13,7 @@
     <FONT size="5" color="navy">
     <center><h2>新規投稿</h2></center>
     </FONT>
+    <div id="one">
     <form name="forma1">
        <center>
         タイトル1<br>
@@ -21,7 +22,10 @@
     </form>
    <div>
    <button id="save1" style="position: absolute; left: 48%">投稿</button>
-    </div><form name="forma2">
+   </div>
+   </div>
+   <div id="two">
+   <form name="forma2">
         <center>
         タイトル2<br>
         <textarea id="input2"></textarea><br>
@@ -29,7 +33,10 @@
     </form>
    <div>
    <button id="save2" style="position: absolute; left: 48%">投稿</button>
-    </div><form name="forma3">
+    </div>
+    </div>
+    <div id="three">
+    <form name="forma3">
         <center>
         タイトル3<br>
         <textarea id="input3"></textarea><br>
@@ -37,7 +44,10 @@
     </form>
    <div>
    <button id="save3" style="position: absolute; left: 48%">投稿</button>
-    </div><form name="forma4">
+    </div>
+    </div>
+   <div id="four">
+   <form name="forma4">
         <center>
         タイトル4<br>
         <textarea id="input4"></textarea><br>
@@ -45,7 +55,10 @@
     </form>
    <div>
    <button id="save4" style="position: absolute; left: 48%">投稿</button>
-    </div><form name="forma5">
+    </div>
+    </div>
+    <div id="five">
+    <form name="forma5">
          <center>
         タイトル5<br>
         <textarea id="input5"></textarea><br>
@@ -54,6 +67,8 @@
    <div>
    <button id="save5" style="position: absolute; left: 48%">投稿</button>
     </div>
+    </div>
+    <div id="six">
     <form name="forma6">
          <center>
         タイトル6<br>
@@ -62,7 +77,10 @@
     </form>
    <div>
    <button id="save6" style="position: absolute; left: 48%">投稿</button>
-    </div><form name="forma7">
+    </div>
+    </div>
+    <div id="seven">
+    <form name="forma7">
          <center>
         タイトル7<br>
         <textarea id="input7"></textarea><br>
@@ -70,6 +88,7 @@
     </form>
    <div>
    <button id="save7" style="position: absolute; left: 48%">投稿</button>
+    </div>
     </div>
 </section>
 <script language="JavaScript" type="text/javascript">
