--- a/投稿画面1月7日.html
+++ b/投稿画面1月7日.html
@@ -114,6 +114,13 @@
    <button id="save7" style="position: absolute; left: 48%">投稿</button>
     </div>
     </div>
+    <table border="0">
+    <tr>
+    <td><img src="スクリーンショット 2022-01-07 16.19.46 Small.jpeg"></td>
+    <td><img src="スクリーンショット 2022-01-07 16.19.46 Small.jpeg"></td>
+    <td><img src="スクリーンショット 2022-01-07 16.19.46 Small.jpeg"></td>
+    </tr>
+    </table>
 </section>
 <script language="JavaScript" type="text/javascript">
 (function (global) {
