--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>UT Chat Board</TITLE>
+<link rel="shortcut icon" href="favicon.ico">
 <style>
     div#board_box{
     font-size:50;
