--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
             push_d += 1;
             if(push_d%2 == 1){
                 like_d += 1;
-            document.getElementById("textLike_b").textContent = like_d;
+            document.getElementById("textLike_d").textContent = like_d;
             }
             else{
                 like_d -= 1;
-            document.getElementById("textLike_b").textContent = like_d;            
+            document.getElementById("textLike_d").textContent = like_d;            
             }
         }
         
         let push_e= 0;
         let like_e= 17;
-        function Like_b(){
+        function Like_e(){
             push_e += 1;
             if(push_e%2 == 1){
                 like_e += 1;
