--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@ UT Chat Board へようこそ<BR>
     </div>
 
 </div> 
+   <a href="http://www.si.t.u-tokyo.ac.jp/"><img
+  src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG">
+  </a>
    <div>
    <button id="reset" style="position: absolute; left: 48%">リセット</button>
     </div>
