--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ UT Chat Board へようこそ<BR>
 
 </div> 
    <a href="http://www.si.t.u-tokyo.ac.jp/"><img
-  src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG">
+  src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG" width="150" height="150">
   </a>
    <div>
    <button id="reset" style="position: absolute; left: 48%">リセット</button>
