--- a/index.html
+++ b/index.html
@@ -268,9 +268,11 @@ UT Chat Board へようこそ<BR>
     </div>
 
 </div> 
+   <div>
    <a href="http://www.si.t.u-tokyo.ac.jp/"><img
   src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG" width="250" height="250">
-  </a>
+  </a>(right: 0;)
+        </div>
    <div>
    <button id="reset" style="position: absolute; left: 48%">リセット</button>
     </div>
