--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
     border-style:groove;
     display:none;
     }
+    
+    div#ad_box_a{
+    height: 250;
+    width: 250;
+    position: absolute;
+    right: 0;
+    }
 
 </style> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -268,9 +275,9 @@ UT Chat Board へようこそ<BR>
     </div>
 
 </div> 
-   <div>
+   <div id="ad_box_a">
    <a href="http://www.si.t.u-tokyo.ac.jp/"><img
-  src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG" width="250" height="250" (right: 0;)>
+  src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG" width="250" height="250">
   </a>
    </div>
    <div>
