--- a/index.html
+++ b/index.html
@@ -95,8 +95,16 @@
     height: 250;
     width: 250;
     position: absolute;
-    right: 0;
+    right: 10;
     top: 0%;
+    }
+    
+    div#ad_box_b{
+    height: 250;
+    width: 250;
+    position: absolute;
+    right: 10;
+    top: 10%;
     }
 
 </style> 
@@ -279,8 +287,15 @@ UT Chat Board へようこそ<BR>
    <div id="ad_box_a">
    <a href="http://www.si.t.u-tokyo.ac.jp/"><img
   src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG" width="250" height="250">
-  </a>
+   </a>
    </div>
+   
+   <div id="ad_box_b">
+   <a href="http://www.si.t.u-tokyo.ac.jp/"><img
+  src ="https://pbs.twimg.com/profile_images/2224958669/PSIlogo_400x400.PNG" width="250" height="250">
+   </a>
+   </div>
+   
    <div>
    <button id="reset" style="position: absolute; left: 48%">リセット</button>
     </div>
