--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  
 </HEAD>
-<BODY bgcolor="#FFFFFF">
+<BODY bgcolor="#f5deb3">
 <FONT size="18" color="navy">
 <CENTER>
 UT Chat Board へようこそ<BR>
