--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  
 </HEAD>
-<BODY bgcolor="#f5deb3">
+<BODY>
 <FONT size="18" color="navy">
 <CENTER>
 UT Chat Board へようこそ<BR>
