--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 UT Chat Board へようこそ<BR>
 </CENTER>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script>
 <div id = board_box>
 <br>
     <div id="minimum_unit_a">
