--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>UT Chat Board</TITLE>
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="shortcut icon" href="favicon.ico">
 <style>   
     div#board_box{
