--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <style>
     /* gradient fallbacks taken from csstricks.com */
 body {
+  background-attachment: fixed;
   background-color: red;
   
   /* SVG fallback for IE 9 (could be data URI, or could use filter) */
@@ -27,7 +28,6 @@ body {
   margin: 0px;
   overflow: hidden;
 }
-    
     div#board_box{
     font-size:50;
     text-align:center; 
@@ -145,7 +145,9 @@ body {
  
 </HEAD>
 <BODY>
+<!-- threejs.org canvas lines example -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+
 <script>
   var mouseX = 0,
       mouseY = 0,
