--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 
 .bg {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #6c3 50%, #f60 50%);
+  background-image: linear-gradient(-60deg, #ff0 50%, #f60 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
