--- a/投稿画面1月7日.html
+++ b/投稿画面1月7日.html
@@ -144,9 +144,9 @@
     </div>
     <table border="0">
     <tr>
-    <td><img src="スクリーンショット 2022-01-07 16.19.46 Small.jpeg"></td>
-    <td><img src="スクリーンショット 2022-01-07 16.19.46 Small.jpeg"></td>
-    <td><img src="スクリーンショット 2022-01-07 16.19.46 Small.jpeg"></td>
+    <td><img src="C:\Users\81902\OneDrive\ドキュメント\プログラミング基礎\スクリーンショット 2022-01-07 16.19.46 Small.jpg"></td>
+    <td><img src="C:\Users\81902\OneDrive\ドキュメント\プログラミング基礎\スクリーンショット 2022-01-07 16.19.46 Small.jpg"></td>
+    <td><img src="C:\Users\81902\OneDrive\ドキュメント\プログラミング基礎\スクリーンショット 2022-01-07 16.19.46 Small.jpg"></td>
     </tr>
     </table>
 </section>
