--- a/投稿画面1月7日.html
+++ b/投稿画面1月7日.html
@@ -144,9 +144,9 @@
     </div>
     <table border="0">
     <tr>
-    <td><img src="C:\Users\81902\OneDrive\ドキュメント\プログラミング基礎\スクリーンショット 2022-01-07 16.19.46 Small.jpg"></td>
-    <td><img src="C:\Users\81902\OneDrive\ドキュメント\プログラミング基礎\スクリーンショット 2022-01-07 16.19.46 Small.jpg"></td>
-    <td><img src="C:\Users\81902\OneDrive\ドキュメント\プログラミング基礎\スクリーンショット 2022-01-07 16.19.46 Small.jpg"></td>
+    <td><img src="https://1.bp.blogspot.com/-gT-GQZdgLs0/V9ppbFvONVI/AAAAAAAA9po/YiIqQRWL8iQHtvzWZLMejZqbZBLHZ0-rwCLcB/s800/computer_net_stalker_man.png"></td>
+    <td><img src="https://1.bp.blogspot.com/-gT-GQZdgLs0/V9ppbFvONVI/AAAAAAAA9po/YiIqQRWL8iQHtvzWZLMejZqbZBLHZ0-rwCLcB/s800/computer_net_stalker_man.png"></td>
+    <td><img src="https://1.bp.blogspot.com/-gT-GQZdgLs0/V9ppbFvONVI/AAAAAAAA9po/YiIqQRWL8iQHtvzWZLMejZqbZBLHZ0-rwCLcB/s800/computer_net_stalker_man.png"></td>
     </tr>
     </table>
 </section>
